--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@
 .contain{
   background-color: #212121;
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"] {
+    -webkit-appearance: none;
+    margin: 0;
+}
