--- a/src/components/ComprarRurales/Comprar.css
+++ b/src/components/ComprarRurales/Comprar.css
@@ -4,5 +4,5 @@
     align-items: center;
     justify-content: center;
     height: auto;
-    background-color: #f5f5f5;
+    background-color: #212121;
 }
