--- a/src/components/ProductsContainer/productsContainer.css
+++ b/src/components/ProductsContainer/productsContainer.css
@@ -1,3 +1,18 @@
+.gridCont{
+    display: grid;
+    grid-template-columns:  1fr 4fr;
+    width: 100%;
+}
+.side{
+    padding: 4em 0;
+    background-color: #212121;
+    min-height: max-content;
+    margin-top: 6em;
+    border-right: solid 3px aliceblue;
+}
+
+
+
 .productsContainer{
     display: flex;
     flex-direction: column;
@@ -9,6 +24,7 @@
     width: 90%;
     color: #212121;
 }
+
 .ProductList{
     display: flex;
     gap: 2em;
@@ -23,7 +39,7 @@
     margin: 0 auto;
     margin-top: 3em;
     align-items: center;
-    color: #212121;
+    color: aliceblue;
 }.h1Order h1{
     font-weight: 600;
     display: flex;
@@ -39,24 +55,44 @@
     color: #212121;
 }
 .h1Order *{
-    margin-top: 1em;
+    margin-top: 2em;
+}
+.h1Order button{
+    display: none;
 }
 
-@media screen and (max-width: 768px){
-    .h1Order{
-        width: 90%;
-        margin: 0 auto;
-        align-items: center;
+@media screen and (max-width: 1068px){
+    .gridCont{
+        display: grid;
+        grid-template-columns:  1fr 6fr;
+        width: 100%;
     }
+    
 }
-
-@media screen and (max-width: 600px){
+@media screen and (max-width: 768px){
     .h1Order{
         width: 95%;
         flex-direction: column;
         display: flex;
+        gap: 1.5em;
+    }
+    .h1Order *{
+        margin-top: 0em;
+    }
+    .gridCont{
+        grid-template-columns:  1fr ;
         gap: 0em;
-    }.h1Order h1{
+
+    }
+    .h1Order button{
+        display: block;
+    }
+    
+
+}
+
+@media screen and (max-width: 600px){
+    .h1Order h1{
         font-size: 1.2em;
         margin-top: 1em;
     }
