--- a/src/components/ProductInfo/productInfo.css
+++ b/src/components/ProductInfo/productInfo.css
@@ -1,11 +1,11 @@
 .productInfoContainer{
     height: 100vh;
-    width: 80%;
+    width: 90%;
     margin: 1em  auto;
     display: flex;
     flex-direction: row;
-    justify-content: left;
-    gap: 2em;
+    justify-content: right;
+    gap: 3em;
     color: #ffffff;
     padding: 2em 0;
     padding-top: 8em;
@@ -13,12 +13,14 @@
 .productInfoContainer h5{
     font-size: 1.3em;
 }
+.carouselContainer {
+    max-width: 50em;
+    
 
+}
 .productInfoContainer .infoImg{
     object-fit: cover;
     object-position: center;
-    max-height: 90vh;
-    
 }
 .productInfoContainer .information{
     color: #ffffff;
@@ -87,15 +89,40 @@
     display: inline;
     gap: .5em;
 }
-.discountBadge{
-    position: absolute;
-    background-color: #b60000;
-    color: #fff;
-    padding: .3em;
-    font-size: 1.1em;
-    font-weight: 700;
-    z-index: 22;
+
+
+.modalBody{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
 }
+.modalBody input{
+    width: 16.5em;
+    height: 1em;
+    padding: 1em;
+    border: none;
+    border-bottom: 3px solid #b60000;
+    background-color: #e0e0e0;
+    transition: all .2s ease-in-out;
+}
+.modalBody textarea{
+    width: 16.5em;
+    height: 10em;
+    padding: 1em;
+    border: none;
+    border-bottom: 3px solid #b60000;
+    background-color: #e0e0e0;
+    transition: all .2s ease-in-out;
+}
+.modalBody input:focus-visible,.modalBody textarea:focus-visible{
+    border: none;
+    outline: none;
+    border-bottom: .3em solid #b60000;
+    background-color: #c2c2c2;
+}
+
 
 
 
@@ -127,6 +154,9 @@
         font-size: .9em;
     }
 }
+
+
+
 @media (max-width: 868px){
     .productInfoContainer{
         width: 80%;
