--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -67,6 +67,7 @@ footer{
     text-decoration: none;
     cursor: pointer;
     user-select: none;
+    text-align: center;
 }.footer3 div a:hover{
     color: #212121;
     scale: 1.05;
