--- a/src/components/ProductInfo/productInfo.css
+++ b/src/components/ProductInfo/productInfo.css
@@ -6,7 +6,7 @@
     flex-direction: row;
     justify-content: right;
     gap: 3em;
-    color: #ffffff;
+    color: #212121;
     padding: 2em 0;
     padding-top: 8em;
 }
@@ -23,7 +23,7 @@
     object-position: center;
 }
 .productInfoContainer .information{
-    color: #ffffff;
+    color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
