--- a/src/components/Vender/Vender.css
+++ b/src/components/Vender/Vender.css
@@ -1,6 +1,6 @@
 .venderContainer{
     height: auto;
-    background-color: white;
+    background-color: #ffd0d0;
     margin: 0 auto
     
 }
@@ -8,7 +8,7 @@
     gap: 1em;
 }
 .section1{
-    background-color: white;
+    background-color: #ffd0d0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -102,7 +102,7 @@
     width: 60%;
     gap: 3em;
     margin: 3em auto;
-    background-color: white;
+    background-color: #ffd0d0;
     padding-bottom: 3em;
     
 }
