--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -68,7 +68,7 @@
     font-size: .6em;
 }
 .location svg{
-    color: #ff0000;
+    color: #b60000;
 }
 .precio{
     display: flex;
@@ -83,7 +83,7 @@
     align-items: center;
     gap: 1em;
     background-color: #e9e9e9;
-    border-bottom: .5em solid #ff0000;
+    border-bottom: .5em solid #b60000;
     padding-top: .6em;
 }.urbarnInfo p{
     font-size: .8em;
@@ -91,10 +91,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #ff0000;
+    color: #b60000;
 }
 .urbarnInfo p svg{
-    color: #ff0000;
+    color: #b60000;
     font-size: 1.8em;
 }
 
