fixing title alligment

--- a/src/components/Nosotros/nosotros.css
+++ b/src/components/Nosotros/nosotros.css
@@ -13,6 +13,7 @@
     font-size: 3em;
     font-weight: 700;
     color: #b60000;
+    text-align: center;
 }
 .nosotrosContainer p{
     font-size: 1.3em;
