--- a/src/components/Hero3/hero3.css
+++ b/src/components/Hero3/hero3.css
@@ -1,7 +1,7 @@
 .containerHero3{
     height: auto;
     min-height: 15em;
-    background-color: aliceblue;
+    background-color: #ededed;
 }
 .title{
     position: relative;
