--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -94,7 +94,7 @@
 .dropdown-menu a:hover {
     background-color: #b60000;
     scale: 1.025;
-    color: #212121;
+    color: #ffffff;
 }
 
 .navbar .navMobile {
